# wispou

./: .env  Cargo.toml  README.md
.github/workflows/: main.yml
assets/: dirtydancing.pxo
doc/: player.md  world.md
src/: global.rs  main.rs  map.rs  save.rs  ui.rs
src/handler/: camera.rs  input.rs  mod.rs  player.rs
src/map/: block.rs  chunk.rs  mod.rs  world.rs
