[package]
name = "wispou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_egui = "0.22"
bevy-inspector-egui = "0.20"
dotenv = "0.15.0"
bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render-2d", "parallel" ] }
rand = "0.8"
log = "0.4"

[profile.dev.package.bevy_rapier2d]
opt-level = 3
